--- a/services/ui/.env.example
+++ b/services/ui/.env.example
@@ -16,4 +16,4 @@ DJANGO_ALLOWED_HOSTS="127.0.0.1,localhost"
 # The full URL to the backend API service.
 # For local development, this points to the local FastAPI server.
 # For production, this must be the URL of your deployed API service.
-API_URL="http://127.0.0.1:8000/api/v1/chat/"
+API_URL="http://127.0.0.1:8080/invoke"
